# estimate-train-time

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
Estimator/: mml_3d_prediction.py  predictor.py  requirements-estmator.txt  tools.py
Estimator/example_training_config/: llemma_7b_4_2_2_P.yml  llemma_7b_4_2_2_V.yml
Estimator/target_config/: llemma_7b_4_2_2_V.yml
Kernel_sampling/: H200_bf16_run_test.sh  fused_kernels_test.py  parallel_timeline_decoder.py  run_get_profilers.sh  run_test.sh  sampling_controller.py  target_functions.py  test_log.txt
Kernel_sampling/configs/collect/: RMSlayernorm.yml  flash_atten.yml  gelu.yml  layernorm.yml  linear2.yml  linear3.yml  linear4.yml  middleStage_optimizer.yml  softmax.yml
Kernel_sampling/configs/profilers/: lastStage_optimizer.yml  layernorm.yml  linear2.yml
Kernel_sampling/configs/test/: RMSlayernorm.yml  flash_atten.yml  gelu.yml  lastStage_optimizer.yml  layernorm.yml  linear4.yml  middleStage_optimizer.yml  moe.yml
Kernel_sampling/configs_old/profilers/: RMSlayernorm.yml  RoPE.yml  embedding.yml  res_add.yml
Kernel_sampling/configs_old/test/: ScaledUpperTriangMaskedSoftmax.yml  flash_atten.yml
Kernel_sampling/megatron_moe/: activations.py  moe_mlp.py  moe_test.py  moe_tools.py  neoxargs.py
docs/: cli-reference.md  concepts.md  configuration.md  getting-started.md  index.md  python-api.md
docs/advanced/: extending.md  kernel-sampling.md  nccl-sampling.md
docs/examples/: basic-usage.md  custom-configs.md
results_backup/: llemma_7b_4_2_2_P.csv
scripts/kernel_sampling/: A100_bf16_run_test.sh  run_collection.sh
src/estimate_train_time/: __init__.py  cli.py
(+89 files in other folders)
